testsuite/tests/showIface/should_fail/THPutDocExternal.hs
{-# LANGUAGE TemplateHaskell #-}

module THPutDocExternal where

import Language.Haskell.TH
import THPutDocExternalA

putDoc (DeclDoc 'f) "Hello world" >> pure []
